--- a/core/index.html
+++ b/core/index.html
@@ -7,7 +7,7 @@
 <meta content="" name="keywords">
 <meta content="" name="description">
 <!-- Favicon -->
-<link href="img\Logos-20230409T091937Z-001\istelogo.png" rel="icon">
+<link href="../img\Logos-20230409T091937Z-001\istelogo.png" rel="icon">
 <!-- Google Web Fonts -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,28 +17,28 @@ rel="stylesheet">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 <!-- Libraries Stylesheet -->
-<link href="lib/animate/animate.min.css" rel="stylesheet">
-<link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+<link href="../lib/animate/animate.min.css" rel="stylesheet">
+<link href="../lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
 <!-- Customized Bootstrap Stylesheet -->
-<link href="css/bootstrap.min.css" rel="stylesheet">
+<link href="../css/bootstrap.min.css" rel="stylesheet">
 <!-- Template Stylesheet -->
-<link href="css/style.css" rel="stylesheet">
+<link href="../css/style.css" rel="stylesheet">
 </head>
 <body>
 <!-- Navbar Start -->
 <nav class="navbar navbar-expand-lg bg-secondary navbar-dark sticky-top py-lg-0 px-lg-5 wow fadeIn"
 data-wow-delay="0.1s">
 
-<h1 class="mb-0 text-primary text-uppercase"><img src="img/Logos-20230409T091937Z-001/TCET-ISTE Logo (Transparent Backgroud).png" width="25%"></h1>
+<h1 class="mb-0 text-primary text-uppercase"><img src="../img/Logos-20230409T091937Z-001/TCET-ISTE Logo (Transparent Backgroud).png" width="25%"></h1>
 <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
 <span class="navbar-toggler-icon"></span>
 </button>
 <div class="collapse navbar-collapse" id="navbarCollapse">
 <div class="navbar-nav ms-auto p-4 p-lg-0">
-<a href="index.html#hero" class="nav-item nav-link">HOME</a>
-<a href="index.html#about" class="nav-item nav-link">ABOUT US</a>
-<a href="events.html" class="nav-item nav-link">EVENTS</a>
-<a href="core.html" class="nav-item nav-link active">CORE</a>
+<a href="../" class="nav-item nav-link">HOME</a>
+<a href="../#about" class="nav-item nav-link">ABOUT US</a>
+<a href="../events/" class="nav-item nav-link">EVENTS</a>
+<a href="../core/" class="nav-item nav-link active">CORE</a>
 </div>
 <a href="#contact" class="btn btn-primary rounded-0 py-2 px-lg-4 d-none d-lg-block">Contact<i
 class="fa fa-arrow-right ms-3"></i></a>
@@ -72,7 +72,7 @@ class="fa fa-arrow-right ms-3"></i></a>
 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
 <div class="team-item">
 <div class="team-img position-relative overflow-hidden">
-<img class="img-fluid" src="img\Core-20230409T091729Z-001\sakshi m.JPG" alt="">
+<img class="img-fluid" src="../img\Core-20230409T091729Z-001\sakshi m.JPG" alt="">
 <div class="team-social">
 <a class="btn btn-square" href="https://www.instagram.com/_sakshiimehta14_/"><i class="fab fa-instagram"></i></a>
 </div>
@@ -88,7 +88,7 @@ class="fa fa-arrow-right ms-3"></i></a>
 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
 <div class="team-item">
 <div class="team-img position-relative overflow-hidden">
-<img class="img-fluid" src="img\Core-20230409T091729Z-001\shah alam.JPG" alt="">
+<img class="img-fluid" src="../img\Core-20230409T091729Z-001\shah alam.JPG" alt="">
 <div class="team-social">
 <a class="btn btn-square" href="https://www.instagram.com/shahalam_khan_/"><i class="fab fa-instagram"></i></a>
 </div>
@@ -104,7 +104,7 @@ class="fa fa-arrow-right ms-3"></i></a>
 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
 <div class="team-item">
 <div class="team-img position-relative overflow-hidden">
-<img class="img-fluid" src="img\Core-20230409T091729Z-001\vinayak.JPG" alt="">
+<img class="img-fluid" src="../img\Core-20230409T091729Z-001\vinayak.JPG" alt="">
 <div class="team-social">
 <a class="btn btn-square" href="https://www.instagram.com/vinayak_nayak_7/"><i class="fab fa-instagram"></i></a>
 </div>
@@ -120,7 +120,7 @@ class="fa fa-arrow-right ms-3"></i></a>
 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
 <div class="team-item">
 <div class="team-img position-relative overflow-hidden">
-<img class="img-fluid" src="img\Core-20230409T091729Z-001\sakshi singh.JPG" alt="">
+<img class="img-fluid" src="../img\Core-20230409T091729Z-001\sakshi singh.JPG" alt="">
 <div class="team-social">
 <a class="btn btn-square" href="https://www.instagram.com/__sakshi2108__/"><i class="fab fa-instagram"></i></a>  
 </div>
@@ -142,7 +142,7 @@ class="fa fa-arrow-right ms-3"></i></a>
 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
 <div class="team-item">
 <div class="team-img position-relative overflow-hidden">
-<img class="img-fluid" src="img\Core-20230409T091729Z-001\aditya rathod.JPG" alt="">
+<img class="img-fluid" src="../img\Core-20230409T091729Z-001\aditya rathod.JPG" alt="">
 <div class="team-social">
 <a class="btn btn-square" href="https://www.instagram.com/rathod4408/"><i class="fab fa-instagram"></i></a> 
 </div>
@@ -157,7 +157,7 @@ class="fa fa-arrow-right ms-3"></i></a>
 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
 <div class="team-item">
 <div class="team-img position-relative overflow-hidden">
-<img class="img-fluid" src="img\Core-20230409T091729Z-001\saanvi.JPG" alt="">
+<img class="img-fluid" src="../img\Core-20230409T091729Z-001\saanvi.JPG" alt="">
 <div class="team-social">
 <a class="btn btn-square" href="https://www.instagram.com/_saanvi.sadani_/"><i class="fab fa-instagram"></i></a>
 </div>
@@ -173,7 +173,7 @@ class="fa fa-arrow-right ms-3"></i></a>
 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
 <div class="team-item">
 <div class="team-img position-relative overflow-hidden">
-<img class="img-fluid" src="img\Core-20230409T091729Z-001\akash webmaster.JPG" alt="">
+<img class="img-fluid" src="../img\Core-20230409T091729Z-001\akash webmaster.JPG" alt="">
 <div class="team-social">
 <a class="btn btn-square" href="https://www.instagram.com/akashh.235/"><i class="fab fa-instagram"></i></a>
 </div>
@@ -189,7 +189,7 @@ class="fa fa-arrow-right ms-3"></i></a>
 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
 <div class="team-item">
 <div class="team-img position-relative overflow-hidden">
-<img class="img-fluid" src="img\Core-20230409T091729Z-001\aayushid.JPG" alt="">
+<img class="img-fluid" src="../img\Core-20230409T091729Z-001\aayushid.JPG" alt="">
 <div class="team-social">
 <a class="btn btn-square" href="https://www.instagram.com/aayushi._.x/"><i class="fab fa-instagram"></i></a>
 </div>
@@ -205,7 +205,7 @@ class="fa fa-arrow-right ms-3"></i></a>
 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
 <div class="team-item">
 <div class="team-img position-relative overflow-hidden">
-<img class="img-fluid" src="img\Core-20230409T091729Z-001\pranav deshmukh.JPG" alt="">
+<img class="img-fluid" src="../img\Core-20230409T091729Z-001\pranav deshmukh.JPG" alt="">
 <div class="team-social">
 <a class="btn btn-square" href="https://www.instagram.com/_pranav_d_/"><i class="fab fa-instagram"></i></a>
 </div>
@@ -221,7 +221,7 @@ class="fa fa-arrow-right ms-3"></i></a>
 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
 <div class="team-item">
 <div class="team-img position-relative overflow-hidden">
-<img class="img-fluid" src="img\Core-20230409T091729Z-001\siddhnat ram.JPG" alt="">
+<img class="img-fluid" src="../img\Core-20230409T091729Z-001\siddhnat ram.JPG" alt="">
 <div class="team-social">
 <a class="btn btn-square" href="https://www.instagram.com/siddhant_1811/"><i class="fab fa-instagram"></i></a>
 </div>
@@ -237,7 +237,7 @@ class="fa fa-arrow-right ms-3"></i></a>
 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
     <div class="team-item">
     <div class="team-img position-relative overflow-hidden">
-    <img class="img-fluid" src="img\Core-20230409T091729Z-001\sakshi dubey.JPG" alt="">
+    <img class="img-fluid" src="../img\Core-20230409T091729Z-001\sakshi dubey.JPG" alt="">
     <div class="team-social">
     <a class="btn btn-square" href="https://www.instagram.com/sakshiiidubeyy/"><i class="fab fa-instagram"></i></a>
     </div>
@@ -253,7 +253,7 @@ class="fa fa-arrow-right ms-3"></i></a>
 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
 <div class="team-item">
 <div class="team-img position-relative overflow-hidden">
-<img class="img-fluid" src="img\Core-20230409T091729Z-001\kunal pawar.JPG" alt="">
+<img class="img-fluid" src="../img\Core-20230409T091729Z-001\kunal pawar.JPG" alt="">
 <div class="team-social">
 <a class="btn btn-square" href="https://www.instagram.com/kp_4103/"><i class="fab fa-instagram"></i></a>
 </div>
@@ -270,7 +270,7 @@ class="fa fa-arrow-right ms-3"></i></a>
 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
         <div class="team-item">
         <div class="team-img position-relative overflow-hidden">
-        <img id="pratik" class="img-fluid" src="img\Core-20230409T091729Z-001\pratik sirog.png" alt="">
+        <img id="pratik" class="img-fluid" src="../img\Core-20230409T091729Z-001\pratik sirog.png" alt="">
         <div class="team-social">
         <a class="btn btn-square" href="https://www.instagram.com/__.pratikkkk.__/"><i class="fab fa-instagram"></i></a>
         </div>
@@ -286,7 +286,7 @@ class="fa fa-arrow-right ms-3"></i></a>
 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
             <div class="team-item">
             <div class="team-img position-relative overflow-hidden">
-            <img id="mukund" class="img-fluid" src="img\Core-20230409T091729Z-001\mukund.png" alt="">
+            <img id="mukund" class="img-fluid" src="../img\Core-20230409T091729Z-001\mukund.png" alt="">
             <div class="team-social">
             <a class="btn btn-square" href="https://www.instagram.com/mukund_dhanuka/"><i class="fab fa-instagram"></i></a>
             </div>
@@ -302,7 +302,7 @@ class="fa fa-arrow-right ms-3"></i></a>
 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                 <div class="team-item">
                 <div class="team-img position-relative overflow-hidden">
-                <img id="core" class="img-fluid" src="img\Core-20230409T091729Z-001\core.JPG" alt="">
+                <img id="core" class="img-fluid" src="../img\Core-20230409T091729Z-001\core.JPG" alt="">
                 <div class="team-social">
                 <a class="btn btn-square" href="https://www.instagram.com/iste_tcet/"><i class="fab fa-instagram"></i></a>
                 </div>
@@ -324,7 +324,7 @@ class="fa fa-arrow-right ms-3"></i></a>
 <div class="row g-0">
 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
 <div class="h-100">
-<img class="img-fluid h-100" src="img/open.jpg" alt="">
+<img class="img-fluid h-100" src="../img/open.jpg" alt="">
 </div>
 </div>
 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
@@ -456,8 +456,8 @@ class="fa fa-arrow-right ms-3"></i></a>
     <a class="btn btn-link" href="#about">About Us</a>
     <a class="btn btn-link" href="#contact">Contact Us</a>
     <a class="btn btn-link" href="#team">Our Team</a>
-    <a class="btn btn-link" href="core.html">Our Core</a>
-    <a class="btn btn-link" href="events.html">Our Events</a>
+    <a class="btn btn-link" href="../core/">Our Core</a>
+    <a class="btn btn-link" href="../events/">Our Events</a>
     <!-- <a class="btn btn-link" href=""></a> -->
     </div>
     <div class="col-lg-4 col-md-6">
@@ -503,11 +503,11 @@ class="fa fa-arrow-right ms-3"></i></a>
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="lib/wow/wow.min.js"></script>
-    <script src="lib/easing/easing.min.js"></script>
-    <script src="lib/waypoints/waypoints.min.js"></script>
-    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="../lib/wow/wow.min.js"></script>
+    <script src="../lib/easing/easing.min.js"></script>
+    <script src="../lib/waypoints/waypoints.min.js"></script>
+    <script src="../lib/owlcarousel/owl.carousel.min.js"></script>
     <!-- Template Javascript -->
-    <script src="js/main.js"></script>
+    <script src="../js/main.js"></script>
     </body>
     </html>
