--- a/events/index.html
+++ b/events/index.html
@@ -7,7 +7,7 @@
 <meta content="" name="keywords">
 <meta content="" name="description">
 <!-- Favicon -->
-<link href="img\Logos-20230409T091937Z-001\istelogo.png" rel="icon">
+<link href="../img\Logos-20230409T091937Z-001\istelogo.png" rel="icon">
 <!-- Google Web Fonts -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,12 +17,12 @@ rel="stylesheet">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 <!-- Libraries Stylesheet -->
-<link href="lib/animate/animate.min.css" rel="stylesheet">
-<link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+<link href="../lib/animate/animate.min.css" rel="stylesheet">
+<link href="../lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
 <!-- Customized Bootstrap Stylesheet -->
-<link href="css/bootstrap.min.css" rel="stylesheet">
+<link href="../css/bootstrap.min.css" rel="stylesheet">
 <!-- Template Stylesheet -->
-<link href="css/style.css" rel="stylesheet">
+<link href="../css/style.css" rel="stylesheet">
 </head>
 <body>
 <!-- Spinner Start -->
@@ -37,16 +37,16 @@ class="show bg-dark position-fixed translate-middle w-100 vh-100 top-50 start-50
 <nav class="navbar navbar-expand-lg bg-secondary navbar-dark sticky-top py-lg-0 px-lg-5 wow fadeIn"
 data-wow-delay="0.1s">
 
-<h1 class="mb-0 text-primary text-uppercase"><img src="img/Logos-20230409T091937Z-001/TCET-ISTE Logo (Transparent Backgroud).png" width="25%"></h1>
+<h1 class="mb-0 text-primary text-uppercase"><img src="../img/Logos-20230409T091937Z-001/TCET-ISTE Logo (Transparent Backgroud).png" width="25%"></h1>
 <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
 <span class="navbar-toggler-icon"></span>
 </button>
 <div class="collapse navbar-collapse" id="navbarCollapse">
 <div class="navbar-nav ms-auto p-4 p-lg-0">
-    <a href="index.html#hero" class="nav-item nav-link active">HOME</a>
-    <a href="index.html#about" class="nav-item nav-link">ABOUT US</a>
-    <a href="events.html" class="nav-item nav-link">EVENTS</a>
-    <a href="core.html" class="nav-item nav-link">CORE</a>
+    <a href="../" class="nav-item nav-link">HOME</a>
+    <a href="../#about" class="nav-item nav-link">ABOUT US</a>
+    <a href="../events/" class="nav-item nav-link active">EVENTS</a>
+    <a href="../core/" class="nav-item nav-link">CORE</a>
 </div>
 <a href="#contact" class="btn btn-primary rounded-0 py-2 px-lg-4 d-none d-lg-block">Contact<i
 class="fa fa-arrow-right ms-3"></i></a>
@@ -58,12 +58,6 @@ class="fa fa-arrow-right ms-3"></i></a>
 </nav>
 <!-- Navbar End -->
 <!-- About End -->
-<div class="image-container">
-    <img src="img\C Lang.jpg" alt="Image Description" width="auto" height="500">
- </div><br>
- <div class="image-container">
-    <img src="img\Screenshot 2022-12-18 125250.png" alt="Image Description" width="auto" height="500">
- </div><br>
 <!-- Events Start -->
 <section id="events" class="text-white">
     <div id="events" class="container-xxl py-5">
@@ -77,17 +71,18 @@ class="fa fa-arrow-right ms-3"></i></a>
     <div class="service-item position-relative overflow-hidden bg-secondary d-flex h-100 p-5 ps-0">
     <div class="ps-4">
     <div style="width: 100%; height: auto;">
-    <a href="fiesta.html">
-    <img id="fiesta"class="img-fluid" src="img\fiesta2logo.jpg" alt=""></a>
+    <a href="../events/fiesta">
+    <img id="fiesta"class="img-fluid" src="../img\fiesta2logo.jpg" alt=""></a>
     </div>
     <br>
     <h3 class="text-uppercase mb-3">FIESTA 2022-2023</h3>
-    <p> Teamwork divides the task and multiplies the success </p> 
-    <p> 18th March <br>
+    <p> 18th March,2023 <br>
+    Teamwork divides the task and multiplies the success </p> 
+    <p> 
     <li>One and only Annual cultural Event for First year engineering students of ES&H department. </li>
     <li>It's the most awaited, energetic, opportunistic event for FE/FT.
-    <li>Back to Back 40+ performances was there.</li>
-    <li>There were more than 400 students from FE/FT in the audience</li>
+    <li>Back to Back 40+ performances were delivered.</li>
+    <li>There were more than 550+ students from FE/FT in the audience</li>
     </p>
     </div>
     </div>
@@ -96,18 +91,19 @@ class="fa fa-arrow-right ms-3"></i></a>
     <div class="service-item position-relative overflow-hidden bg-secondary d-flex h-100 p-5 ps-0">
     <div class="ps-4">
     <div style="width: auto; height: auto;">
-    <a href="multicon.html">
-    <img id="multicon" class="img-fluid" src="img/Multicon 2023.jpg" alt=""></a>
+    <a href="../events/multicon">
+    <img id="multicon" class="img-fluid" src="../img/Multicon 2023.jpg" alt=""></a>
     </div>
     <br>
     <h3 class="text-uppercase mb-3">
     MULTICON-W (EWPPC)</h3>
-    <p>Self-confidence provides strength and Power impart knowledge.It provides stability and stability leads to victory.Lines got confirmed because of first year students.</p>
-    <p>24 To 25th February<br>
+    <p>24th-25th February,2023<br>
+    Self-confidence empowers and imparts knowledge, while also fostering stability, leading to victory. The confirmation of the lines was a result of the first-year students efforts.</p>
+    <p>
     <li>More than 400 students enrolled for various workshops</li>
     <li>Received 103+43 Research papers and Posters respectively in these 2 days of conference</li>
     <li>It was in collaboration with all the Multi-National Companies</li>
-    <li>Delegates were industry experts, chancellor/vice-chancellor of various Universities.</li>
+    <li>Delegates were Industry experts, Chancellor/Vice-chancellor of various Universities.</li>
     </p>
     </div>
     </div>
@@ -116,13 +112,13 @@ class="fa fa-arrow-right ms-3"></i></a>
     <div class="service-item position-relative overflow-hidden bg-secondary d-flex h-100 p-5 ps-0">
     <div class="ps-4">
     <div style="width: auto; height: auto;">
-    <a href="resume.html">
-    <img id="resume"class="img-fluid" src="img/Resume Building.jpeg" alt=""></a>
+    <a href="../events/resume">
+    <img id="resume"class="img-fluid" src="../img/Resume Building.jpeg" alt=""></a>
     </div>
     <br>
     <h3 class="text-uppercase mb-3">
-    Resume building Workshop</h3>
-    <p>7th January</p>
+    Resume Building Workshop</h3>
+    <p>7th January,2023</p>
     <p>The beginning is the most important part of the work<br>
     <li>It was needed to inculcate the skills of building strong resume for future.</li>
     <li>Session was conducted by Ms.Shubhangi Joshi Jt. (Discipline secretary TSDW &
@@ -136,22 +132,22 @@ class="fa fa-arrow-right ms-3"></i></a>
     <div class="service-item position-relative overflow-hidden bg-secondary d-flex h-100 p-5 ps-0">
     <div class="ps-4">
     <div style="width: 100%; height: auto;">
-    <a href="cworkshop.html">
-    <img id="workshopc"class="img-fluid" src="img/C - Language Workshop.jpeg" alt=""></a>
+    <a href="../events/cworkshop">
+    <img id="workshopc"class="img-fluid" src="../img/C - Language Workshop.jpeg" alt=""></a>
     </div>
     <br>
     <h3 class="text-uppercase mb-3">
     Workshop on C langugage</h3>
-    <p>26th August<br>
+    <p>17th & 18th December,2022<br>
     <br>Setting up your development environment</br>
     Throughout this workshop, we will cover each of these topics
-    <li>Basic syntax and data types:</li>
-    <li>Control structures:</li>
-    <li>Functions</li>
-    <li>Arrays and strings:</li>
-    <li>Pointers</li>
-    <li>Structures and unions</li>
-    <li> File handling</li>
+    <li>Basic syntax and data types:</li><br>
+    <li>Control structures:</li><br>
+    <li>Functions</li><br>
+    <li>Arrays and strings:</li><br>
+    <li>Pointers</li><br>
+    <li>Structures and unions</li><br>
+    <li> File handling</li><br>
     </p>
     </div>
     </div>
@@ -160,18 +156,18 @@ class="fa fa-arrow-right ms-3"></i></a>
         <div class="service-item position-relative overflow-hidden bg-secondary d-flex h-100 p-5 ps-0">
         <div class="ps-4">
         <div style="width: auto; height: auto;">
-        <a href="calciworkshop.html">
-        <img id="scificalci" class="img-fluid" src="img\Scientific Calculator.jpeg" alt=""></a>
+        <a href="../events/calciworkshop">
+        <img id="scificalci" class="img-fluid" src="../img\Scientific Calculator.jpeg" alt=""></a>
         </div>
         <br>
         <h3 class="text-uppercase mb-3">
-        SCIENTIFIC-CALCULATOR WORKSHOP</h3>
+        SCIENTIFIC-CALCULATOR WORKSHOP</h3><p>3rd December,2022</p>
         <p>Scientific calculators are an essential tool for engineering students, and it's crucial for them to be well-versed in using these calculators to solve complex mathematical problems.</p>
-        <p>3rd December<br>
-        <li>All  students from group1 & group2 of every departments were present.</li>
-        <li>They also got the activity hours for the workshop.</li>
-        <li>Speakers for  the event were Mr.Shah Alam khan vice.Chairperson & Ms.Sakshi Singh Treasurer cores of ISTE.</li>
-        <li>It was very beneficial for the first year students for learning to Opertate Sci-fi-Calculators.</li>
+        <p>
+            <li>The event's speakers were Mr. Shah Alam Khan, the Vice-Chairperson, and Ms. Sakshi Singh, the Treasurer of ISTE.</li>
+            <li>The FE/FT students were successfully familiarized with the Scientific Calculator.</li>
+            <li>Students got to learn the efficient use of the calculator and various tricks to overcome mathematical problems.</li>
+            <li>Participants came up with various queries regarding the topic which were all cleared during the session only.</li>
         </p>
         </div>
         </div>
@@ -180,17 +176,15 @@ class="fa fa-arrow-right ms-3"></i></a>
     <div class="service-item position-relative overflow-hidden bg-secondary d-flex h-100 p-5 ps-0">
     <div class="ps-4">
     <div style="width: 100%; height: auto;">
-    <a href="talent.html">
-    <img id="talent"class="img-fluid" src="img/Talent Show.jpg" alt=""></a>
+    <a href="../events/talent">
+    <img id="talent"class="img-fluid" src="../img/Talent Show.jpg" alt=""></a>
     </div>
     <br>
     <h3 class="text-uppercase mb-3">
     Talent Show</h3>
-    <p>15th November<br>
-    <li>The First Event where the First Year Students showcase their talents.</li>
-    <li>This is a opportunity for them, to create life long friends and memories.</li>
-    <li>Talent shows provide an opportunity for individuals to express themselves, build confidence, and gain exposure to their talents. </li>
-    <li>Talent shows can be competitive or non-competitive, with prizes or recognition given to outstanding performers.</li>
+    <p>15th November,2022<br>
+    <li>The Talent Show served as a warm welcome for the 1st-year students, offering a platform and the opportunity to interact and forge connections with their peers.</li><br>
+    <li>It also allowed the students to express themselves, build confidence, and gain exposure to their talents. </li><br>
     </p>
     </div>
     </div>
@@ -199,17 +193,17 @@ class="fa fa-arrow-right ms-3"></i></a>
         <div class="service-item position-relative overflow-hidden bg-secondary d-flex h-100 p-5 ps-0">
         <div class="ps-4">
         <div style="width: 100%; height: auto;">
-        <a href="zephyr.html">
-        <img id="zephyr" class="img-fluid" src="img/Zephyr 2022.jpg" alt=""></a>
+        <a href="../events/zephyr">
+        <img id="zephyr" class="img-fluid" src="../img/Zephyr 2022.jpg" alt=""></a>
         </div>
         <br>
         <h3 class="text-uppercase mb-3">
         Zephyr-Techfest</h3>
-        <p>4th To 6th October<br>
+        <p>6th to 8th October,2022<br>
+        <li>Zephyr is TCET's biggest Technical Fest! The theme proposed for Zephyr 2022 was Metaverse. The events conducted were creative and fun which got the interest of all the students from our college and other colleges as well.</li>
         <li> A Gaming Event for all the Gamers to showoff their skills and their Gameplays to each other. </li>
-        <li>Games From:</li>
-        <li>CSGO</li>
-        <li>Valorant</li>
+        <li>Mortal Kombat, Valorant and Skills and Thrills (Cultural Event) were the events conducted by ISTE.</li>
+        <li>It provided an atmosphere for the participants to experience healthy competition.</li>
         <li>Rocket League</li>
         <li>Fifa</li>
         <li>Last Of Us</li>
@@ -222,18 +216,17 @@ class="fa fa-arrow-right ms-3"></i></a>
             <div class="service-item position-relative overflow-hidden bg-secondary d-flex h-100 p-5 ps-0">
             <div class="ps-4">
             <div style="width: 100%; height: auto;">
-            <a href="tour.html">    
-            <img id="tour"class="img-fluid" src="img/Roadmap To Engineering 2022.jpg" alt=""></a>
+            <a href="../events/tour">    
+            <img id="tour"class="img-fluid" src="../img/Roadmap To Engineering 2022.jpg" alt=""></a>
             </div>
             <br>
             <h3 class="text-uppercase mb-3">
             Institute Tour</h3>
-            <p>1st October<br>
-            <li>The Students get familiar to the Campus. </li>
-            <li>A place where their new journey of Life is going to begin.</li>
-            <li>An institute tour is a planned visit to an educational institution such as a school, college, university, or vocational training center.</li>
-            <li>The purpose of an institute tour is to give visitors a firsthand experience of the facilities, resources, and programs offered by the institution.</li>
-            <li>CAMPS YOU GOT THIS !!!</li>
+            <p>9th July,2023<br>
+            <li>The Students get familiar to the Campus. </li><br>
+            <li>To foster curiosity and nurture a scientific/engineering mindset.</li><br>
+            <li>The purpose of an institute tour is to give visitors a firsthand experience of the facilities, resources, and programs offered by the institution.</li><br>
+            <li>CHAMPS YOU GOT THIS !!!</li>
             </p>
             </div>
             </div>
@@ -242,24 +235,26 @@ class="fa fa-arrow-right ms-3"></i></a>
                 <div class="service-item position-relative overflow-hidden bg-secondary d-flex h-100 p-5 ps-0">
                 <div class="ps-4">
                 <div style="width: 100%; height: auto;">
-                <a href="stem.html">
-                <img id="stem"class="img-fluid" src="img/download.jpg" alt=""></a>
+                <a href="../events/stem">
+                <img id="stem"class="img-fluid" src="../img/download.jpg" alt=""></a>
                 </div>
                 <br>
                 <h3 class="text-uppercase mb-3">
                 STEM</h3>
-                <p>15th JUNE</p>
-                <p>In science, technology, engineering, and mathematics (STEM), STEM refers to the academic disciplines of science, technology, engineering, and mathematics, which are considered essential for advancing innovation and economic growth.<br>
-                <li>The way the College functions, and how the syllabus would be in their upcoming semesters. </li>
-                <li>This is essential for Student's Growth in Academics.</li>
-                <li>Hence its an IMPORTANT event to Attend.</li>
+                <p>6th to 9th June,2023</p>
+                <p>AC-STEM 2023, organised by TCET-ISTE, aims to equip Junior College Students from Science, Commerce and Arts backgrounds with essential STEM (Science, Technology, Engineering and Technology) skills for the evolving job market
+                    It's Objective is to:
+                    <li>To  instil the significance of STEM education among students.</li>
+                    <li>To assist students in recognizing their potential and aptitude for pursuing STEM education.</li>
+                    <li>To ignite enthusiasm for practical, skill-based technical knowledge and inspire students to become proficient professionals through STEM education.</li>
+                    <li>To cultivate a vibrant and enjoyable atmosphere by introducing a series of stimulating and challenging games.</li>
                 </p>
                 </div>
                 </div>
                 </div>      
-    </div>
-    </div>
-    </div>
+        </div>
+        </div>
+        </div>
     </section>
     <!-- Service End -->
     <!-- Contact Starts -->
@@ -355,8 +350,8 @@ class="fa fa-arrow-right ms-3"></i></a>
     <a class="btn btn-link" href="#about">About Us</a>
     <a class="btn btn-link" href="#contact">Contact Us</a>
     <a class="btn btn-link" href="#team">Our Team</a>
-    <a class="btn btn-link" href="core.html">Our Core</a>
-<a class="btn btn-link" href="events.html">Our Events</a>
+    <a class="btn btn-link" href="../core/">Our Core</a>
+<a class="btn btn-link" href="../events/">Our Events</a>
     <!-- <a class="btn btn-link" href=""></a> -->
     </div>
     <div class="col-lg-4 col-md-6">
@@ -402,11 +397,11 @@ class="fa fa-arrow-right ms-3"></i></a>
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="lib/wow/wow.min.js"></script>
-    <script src="lib/easing/easing.min.js"></script>
-    <script src="lib/waypoints/waypoints.min.js"></script>
-    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="../lib/wow/wow.min.js"></script>
+    <script src="../lib/easing/easing.min.js"></script>
+    <script src="../lib/waypoints/waypoints.min.js"></script>
+    <script src="../lib/owlcarousel/owl.carousel.min.js"></script>
     <!-- Template Javascript -->
-    <script src="js/main.js"></script>
+    <script src="../js/main.js"></script>
     </body>
     </html>
