--- a/events/talent.html
+++ b/events/talent.html
@@ -7,7 +7,7 @@
 <meta content="" name="keywords">
 <meta content="" name="description">
 <!-- Favicon -->
-<link href="img\Logos-20230409T091937Z-001\istelogo.png" rel="icon">
+<link href="../img\Logos-20230409T091937Z-001\istelogo.png" rel="icon">
 <!-- Google Web Fonts -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,12 +17,12 @@ rel="stylesheet">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 <!-- Libraries Stylesheet -->
-<link href="lib/animate/animate.min.css" rel="stylesheet">
-<link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+<link href="../lib/animate/animate.min.css" rel="stylesheet">
+<link href="../lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
 <!-- Customized Bootstrap Stylesheet -->
-<link href="css/bootstrap.min.css" rel="stylesheet">
+<link href="../css/bootstrap.min.css" rel="stylesheet">
 <!-- Template Stylesheet -->
-<link href="css/style.css" rel="stylesheet">
+<link href="../css/style.css" rel="stylesheet">
 </head>
 <body>
 <!-- Spinner Start -->
@@ -37,49 +37,64 @@ class="show bg-dark position-fixed translate-middle w-100 vh-100 top-50 start-50
 <nav class="navbar navbar-expand-lg bg-secondary navbar-dark sticky-top py-lg-0 px-lg-5 wow fadeIn"
 data-wow-delay="0.1s">
 
-<h1 class="mb-0 text-primary text-uppercase"><img src="img/Logos-20230409T091937Z-001/TCET-ISTE Logo (Transparent Backgroud).png" width="25%"></h1>
+<h1 class="mb-0 text-primary text-uppercase"><img src="../img/Logos-20230409T091937Z-001/TCET-ISTE Logo (Transparent Backgroud).png" width="25%"></h1>
 <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
 <span class="navbar-toggler-icon"></span>
 </button>
 <div class="collapse navbar-collapse" id="navbarCollapse">
 <div class="navbar-nav ms-auto p-4 p-lg-0">
-    <a href="index.html#hero" class="nav-item nav-link active">HOME</a>
-    <a href="index.html#about" class="nav-item nav-link">ABOUT US</a>
-    <a href="events.html" class="nav-item nav-link">EVENTS</a>
-    <a href="core.html" class="nav-item nav-link">CORE</a>
+    <a href="../" class="nav-item nav-link active">HOME</a>
+    <a href="../#about" class="nav-item nav-link">ABOUT US</a>
+    <a href="../events/" class="nav-item nav-link">EVENTS</a>
+    <a href="../core/" class="nav-item nav-link">CORE</a>
 </div>
 <a href="#contact" class="btn btn-primary rounded-0 py-2 px-lg-4 d-none d-lg-block">Contact<i
 class="fa fa-arrow-right ms-3"></i></a>
 </div>
-<div class="form-check form-switch px-5 text-primary">
-    <input class="form-check-input" type="checkbox" id="darkModeToggle" onchange="toggleDarkMode(this)" />
-    <label class="form-check-label" for="darkModeToggle">Dark Mode</label>
-  </div>
+<div class="form-check form-switch px-5 text-white">
+   <input class="form-check-input" type="checkbox" id="darkModeToggle" onchange="toggleDarkMode(this)" />
+   <label class="form-check-label" for="darkModeToggle">Dark Mode</label>
+ </div>
 </nav>
 <!-- Navbar End -->
 <!-- About End -->
 <div class="image-container">
-    <img src="img\acstem\WhatsApp Image 2023-06-14 at 19.42.08.jpeg" alt="Image Description" width="auto" height="500">
+    <img src="../img\talentshow\IMG_5162.jpg" alt="Image Description" width="auto" height="500">
+ </div><br>
+ <div class="image-container">
+    <img src="../img\talentshow\IMG_3464.jpg" alt="Image Description" width="auto" height="500">
+ </div><br>
+ <div class="image-container">
+    <img src="../img\talentshow\DSC_0285.jpg" alt="Image Description" width="auto" height="500">
+ </div><br>
+ <div class="image-container">
+    <img src="../img\talentshow\IMG_2907.jpg" alt="Image Description" width="auto" height="500">
+ </div><br>
+ <div class="image-container">
+    <img src="../img\talentshow\IMG_2935.jpg" alt="Image Description" width="auto" height="500">
+ </div><br>
+ <div class="image-container">
+    <img src="../img\talentshow\IMG_3025.jpg" alt="Image Description" width="auto" height="500">
+ </div><br>
+ <div class="image-container">
+    <img src="../img\talentshow\IMG_3047.jpg" alt="Image Description" width="auto" height="500">
+ </div><br>
+ <div class="image-container">
+    <img src="../img\talentshow\IMG_3050.jpg" alt="Image Description" width="auto" height="500">
+ </div><br>
+ <div class="image-container">
+    <img src="../img\talentshow\IMG_3088.jpg" alt="Image Description" width="auto" height="500">
  </div><br>
 <div class="image-container">
-    <img src="img\acstem\WhatsApp Image 2023-06-14 at 19.42.30.jpeg" alt="Image Description" width="auto" height="500">
+    <img src="../img\talentshow\IMG_3457.jpg" alt="Image Description" width="auto" height="500">
  </div><br>
  <div class="image-container">
-    <img src="img\acstem\WhatsApp Image 2023-06-14 at 19.42.31.jpeg" alt="Image Description" width="auto" height="500">
+    <img src="../img\talentshow\IMG_3105.jpg" alt="Image Description" width="auto" height="500">
  </div><br>
  <div class="image-container">
-    <img src="img\acstem\WhatsApp Image 2023-06-14 at 19.44.40.jpeg" alt="Image Description" width="auto" height="500">
+    <img src="../img\talentshow\IMG_3119.jpg" alt="Image Description" width="auto" height="500">
  </div><br>
- <div class="image-container">
-    <img src="img\acstem\WhatsApp Image 2023-06-14 at 19.44.42.jpeg" alt="Image Description" width="auto" height="500">
- </div><br>
- <div class="image-container">
-    <img src="img\acstem\WhatsApp Image 2023-06-14 at 19.44.43.jpeg" alt="Image Description" width="auto" height="500">
- </div><br>
- <div class="image-container">
-    <img src="img\acstem\WhatsApp Image 2023-06-14 at 19.44.44.jpeg" alt="Image Description" width="auto" height="500">
- </div><br>
- <!-- Events Start -->
+<!-- Events Start -->
 <section id="events" class="text-white">
     <div id="events" class="container-xxl py-5">
     <div class="container">
@@ -92,8 +107,8 @@ class="fa fa-arrow-right ms-3"></i></a>
     <div class="service-item position-relative overflow-hidden bg-secondary d-flex h-100 p-5 ps-0">
     <div class="ps-4">
     <div style="width: 100%; height: auto;">
-    <a href="fiesta.html">
-    <img id="fiesta"class="img-fluid" src="img\fiesta2logo.jpg" alt=""></a>
+    <a href="../events/fiesta">
+    <img id="fiesta"class="img-fluid" src="../img\fiesta2logo.jpg" alt=""></a>
     </div>
     <br>
     <h3 class="text-uppercase mb-3">FIESTA 2022-2023</h3>
@@ -111,8 +126,8 @@ class="fa fa-arrow-right ms-3"></i></a>
     <div class="service-item position-relative overflow-hidden bg-secondary d-flex h-100 p-5 ps-0">
     <div class="ps-4">
     <div style="width: auto; height: auto;">
-    <a href="multicon.html">
-    <img id="multicon" class="img-fluid" src="img/Multicon 2023.jpg" alt=""></a>
+    <a href="../events/multicon">
+    <img id="multicon" class="img-fluid" src="../img/Multicon 2023.jpg" alt=""></a>
     </div>
     <br>
     <h3 class="text-uppercase mb-3">
@@ -131,8 +146,8 @@ class="fa fa-arrow-right ms-3"></i></a>
     <div class="service-item position-relative overflow-hidden bg-secondary d-flex h-100 p-5 ps-0">
     <div class="ps-4">
     <div style="width: auto; height: auto;">
-    <a href="resume.html">
-    <img id="resume"class="img-fluid" src="img/Resume Building.jpeg" alt=""></a>
+    <a href="../events/resume">
+    <img id="resume"class="img-fluid" src="../img/Resume Building.jpeg" alt=""></a>
     </div>
     <br>
     <h3 class="text-uppercase mb-3">
@@ -151,8 +166,8 @@ class="fa fa-arrow-right ms-3"></i></a>
     <div class="service-item position-relative overflow-hidden bg-secondary d-flex h-100 p-5 ps-0">
     <div class="ps-4">
     <div style="width: 100%; height: auto;">
-    <a href="cworkshop.html">
-    <img id="workshopc"class="img-fluid" src="img/C - Language Workshop.jpeg" alt=""></a>
+    <a href="../events/cworkshop">
+    <img id="workshopc"class="img-fluid" src="../img/C - Language Workshop.jpeg" alt=""></a>
     </div>
     <br>
     <h3 class="text-uppercase mb-3">
@@ -175,8 +190,8 @@ class="fa fa-arrow-right ms-3"></i></a>
         <div class="service-item position-relative overflow-hidden bg-secondary d-flex h-100 p-5 ps-0">
         <div class="ps-4">
         <div style="width: auto; height: auto;">
-        <a href="calciworkshop.html">
-        <img id="scificalci" class="img-fluid" src="img\Scientific Calculator.jpeg" alt=""></a>
+        <a href="../events/calciworkshop">
+        <img id="scificalci" class="img-fluid" src="../img\Scientific Calculator.jpeg" alt=""></a>
         </div>
         <br>
         <h3 class="text-uppercase mb-3">
@@ -195,8 +210,8 @@ class="fa fa-arrow-right ms-3"></i></a>
     <div class="service-item position-relative overflow-hidden bg-secondary d-flex h-100 p-5 ps-0">
     <div class="ps-4">
     <div style="width: 100%; height: auto;">
-    <a href="talent.html">
-    <img id="talent"class="img-fluid" src="img/Talent Show.jpg" alt=""></a>
+    <a href="../events/talent">
+    <img id="talent"class="img-fluid" src="../img/Talent Show.jpg" alt=""></a>
     </div>
     <br>
     <h3 class="text-uppercase mb-3">
@@ -214,8 +229,8 @@ class="fa fa-arrow-right ms-3"></i></a>
         <div class="service-item position-relative overflow-hidden bg-secondary d-flex h-100 p-5 ps-0">
         <div class="ps-4">
         <div style="width: 100%; height: auto;">
-        <a href="zephyr.html">
-        <img id="zephyr" class="img-fluid" src="img/Zephyr 2022.jpg" alt=""></a>
+        <a href="../events/zephyr">
+        <img id="zephyr" class="img-fluid" src="../img/Zephyr 2022.jpg" alt=""></a>
         </div>
         <br>
         <h3 class="text-uppercase mb-3">
@@ -237,8 +252,8 @@ class="fa fa-arrow-right ms-3"></i></a>
             <div class="service-item position-relative overflow-hidden bg-secondary d-flex h-100 p-5 ps-0">
             <div class="ps-4">
             <div style="width: 100%; height: auto;">
-            <a href="tour.html">    
-            <img id="tour"class="img-fluid" src="img/Roadmap To Engineering 2022.jpg" alt=""></a>
+            <a href="../events/tour">    
+            <img id="tour"class="img-fluid" src="../img/Roadmap To Engineering 2022.jpg" alt=""></a>
             </div>
             <br>
             <h3 class="text-uppercase mb-3">
@@ -257,8 +272,8 @@ class="fa fa-arrow-right ms-3"></i></a>
                 <div class="service-item position-relative overflow-hidden bg-secondary d-flex h-100 p-5 ps-0">
                 <div class="ps-4">
                 <div style="width: 100%; height: auto;">
-                <a href="stem.html">
-                <img id="stem"class="img-fluid" src="img/download.jpg" alt=""></a>
+                <a href="../events/stem">
+                <img id="stem"class="img-fluid" src="../img/download.jpg" alt=""></a>
                 </div>
                 <br>
                 <h3 class="text-uppercase mb-3">
@@ -370,8 +385,8 @@ class="fa fa-arrow-right ms-3"></i></a>
     <a class="btn btn-link" href="#about">About Us</a>
     <a class="btn btn-link" href="#contact">Contact Us</a>
     <a class="btn btn-link" href="#team">Our Team</a>
-    <a class="btn btn-link" href="core.html">Our Core</a>
-<a class="btn btn-link" href="events.html">Our Events</a>
+    <a class="btn btn-link" href="../core/">Our Core</a>
+<a class="btn btn-link" href="../events/">Our Events</a>
     <!-- <a class="btn btn-link" href=""></a> -->
     </div>
     <div class="col-lg-4 col-md-6">
@@ -417,11 +432,11 @@ class="fa fa-arrow-right ms-3"></i></a>
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="lib/wow/wow.min.js"></script>
-    <script src="lib/easing/easing.min.js"></script>
-    <script src="lib/waypoints/waypoints.min.js"></script>
-    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="../lib/wow/wow.min.js"></script>
+    <script src="../lib/easing/easing.min.js"></script>
+    <script src="../lib/waypoints/waypoints.min.js"></script>
+    <script src="../lib/owlcarousel/owl.carousel.min.js"></script>
     <!-- Template Javascript -->
-    <script src="js/main.js"></script>
+    <script src="../js/main.js"></script>
     </body>
     </html>
