--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta content="" name="keywords">
 <meta content="" name="description">
 <!-- Favicon -->
-<link href="img\Logos-20230409T091937Z-001\istelogo.png" rel="icon">
+<link href="../img\Logos-20230409T091937Z-001\istelogo.png" rel="icon">
 <!-- Google Web Fonts -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -44,10 +44,10 @@ class="show bg-dark position-fixed translate-middle w-100 vh-100 top-50 start-50
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto p-4 p-lg-0">
-          <a href="index.html#hero" class="nav-item nav-link active">HOME</a>
-          <a href="index.html#about" class="nav-item nav-link ">ABOUT US</a>
-          <a href="events.html" class="nav-item nav-link">EVENTS</a>
-          <a href="core.html" class="nav-item nav-link">CORE</a>
+          <a href="../#hero" class="nav-item nav-link active">HOME</a>
+          <a href="../#about" class="nav-item nav-link ">ABOUT US</a>
+          <a href="./events/" class="nav-item nav-link">EVENTS</a>
+          <a href="./core/" class="nav-item nav-link">CORE</a>
         </div>
         <a href="#contact" class="btn btn-primary rounded-0 py-2 px-lg-4 d-none d-lg-block">Contact<i class="fa fa-arrow-right ms-3"></i></a>
       </div>
@@ -371,8 +371,8 @@ Mumbai, Maharashtra - 400101</span>
 <a class="btn btn-link" href="#about">About Us</a>
 <a class="btn btn-link" href="#contact">Contact Us</a>
 <a class="btn btn-link" href="#team">Our Team</a>
-<a class="btn btn-link" href="core.html">Our Core</a>
-<a class="btn btn-link" href="events.html">Our Events</a>
+<a class="btn btn-link" href="./core/">Our Core</a>
+<a class="btn btn-link" href="./events/">Our Events</a>
 <!-- <a class="btn btn-link" href=""></a> -->
 </div>
 <div class="col-lg-4 col-md-6">
